--- a/src/app/components/nodes-view/nodes-view.component.html
+++ b/src/app/components/nodes-view/nodes-view.component.html
@@ -18,12 +18,9 @@
 
 <div class="top-part">
   <div class="dropdown-wrapper">
-    <label class="part-label">Partition: </label>
-    <mat-form-field>
-      <mat-select
-        [(value)]="partitionSelected"
-        (selectionChange)="onPartitionSelectionChanged($event)"
-      >
+    <mat-form-field appearance="outline">
+      <mat-label>Partition</mat-label>
+      <mat-select [(value)]="partitionSelected" (selectionChange)="onPartitionSelectionChanged($event)">
         <mat-option *ngFor="let part of partitionList" [value]="part.value">
           {{ part.name }}
         </mat-option>
@@ -32,79 +29,126 @@
   </div>
 
   <div class="right-wrapper">
-    <div class="filter">
-      <mat-form-field>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Filter" #input>
-      </mat-form-field>
-    </div>
-    
+    <app-search-input [control]="searchControl" (valueChange)="onChangeSearchText($event)"></app-search-input>
+
     <div class="btn-wrapper">
       <button class="btn" (click)="toggle()" [style.background-color]="detailToggle ? '#313d54' : '#f5f5f5'">
         <i class="material-icons __icon" [style.color]="detailToggle ? '#f5f5f5' : '#313d54' ">more_horiz</i>
       </button>
     </div>
   </div>
-  
+
 </div>
 <div class="nodes-view">
-  <div class="mat-elevation-z8">
-    <mat-table [dataSource]="nodeDataSource" matSort #nodeSort="matSort">
-      <ng-container [matColumnDef]="columnDef.colId" *ngFor="let columnDef of nodeColumnDef">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>{{ columnDef.colName }}</mat-header-cell>
+  <mat-table [dataSource]="nodeDataSource" matSort #nodeSort="matSort">
+    <ng-container [matColumnDef]="columnDef.colId" *ngFor="let columnDef of nodeColumnDef">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ columnDef.colName }}</mat-header-cell>
 
-        <ng-container
-          *ngIf="
+      <ng-container *ngIf="
             ['capacity', 'occupied', 'allocated', 'available', 'utilized'].includes(columnDef.colId);
             else renderNext_1
-          "
-        >
+          ">
+        <mat-cell *matCellDef="let element">
+          <ng-container *ngIf="columnDef.colFormatter; else showNodeRawData">
+            <ng-container *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue">
+              <ul class="mat-res-ul">
+                <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
+                  <li class="mat-res-li" *ngIf="i<2" [innerHTML]="resource | highlightSearch: searchControl.value"></li>
+                  <li class="mat-res-li" *ngIf="i>=2 && detailToggle"
+                    [innerHTML]="resource | highlightSearch: searchControl.value"></li>
+                </ng-container>
+              </ul>
+            </ng-container>
+          </ng-container>
+          <ng-template #showNodeRawData>
+            <span [innerHTML]="element[columnDef.colId] | highlightSearch: searchControl.value"></span>
+          </ng-template>
+        </mat-cell>
+      </ng-container>
+
+      <ng-template #renderNext_1>
+
+        <ng-container *ngIf="columnDef.colId!=='attributes'">
           <mat-cell *matCellDef="let element">
-            <ng-container *ngIf="columnDef.colFormatter; else showNodeRawData">
+            <span [innerHTML]="element[columnDef.colId] || 'n/a' | highlightSearch: searchControl.value"></span>
+          </mat-cell>
+        </ng-container>
+
+        <ng-container *ngIf="columnDef.colId=='attributes'">
+          <mat-cell *matCellDef="let element" class="mat-attr">
+            <ul class="mat-attr-ul">
+              <ng-container *ngFor="let attribute of formatAttribute(element[columnDef.colId]); let i = index">
+                <li class="mat-attr-li" [innerHTML]="attribute | highlightSearch: searchControl.value"></li>
+              </ng-container>
+            </ul>
+          </mat-cell>
+        </ng-container>
+      </ng-template>
+    </ng-container>
+
+    <ng-container matColumnDef="indicatorIcon">
+      <mat-header-cell *matHeaderCellDef class="indicator-icon"></mat-header-cell>
+      <mat-cell *matCellDef="let element" class="indicator-icon">
+        <span>
+          <i class="fas fa-plus-circle" *ngIf="!element.isSelected"></i>
+          <i class="fas fa-minus-circle" *ngIf="element.isSelected"></i>
+        </span>
+      </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="noRecord">
+      <mat-footer-cell *matFooterCellDef>
+        <div class="no-record">No records found</div>
+      </mat-footer-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="nodeColumnIds"></mat-header-row>
+
+    <mat-row *matRowDef="let row; columns: nodeColumnIds" [class.selected-row]="selectedRow === row"
+      (click)="toggleRowSelection(row)"></mat-row>
+
+    <mat-footer-row *matFooterRowDef="['noRecord']"
+      [ngStyle]="{ display: isNodeDataSourceEmpty() ? '' : 'none' }"></mat-footer-row>
+  </mat-table>
+
+  <mat-paginator #nodesViewMatPaginator [pageSizeOptions]="[10, 20, 50, 100]"
+    [ngStyle]="{ display: isNodeDataSourceEmpty() ? 'none' : '' }" (page)="onPaginatorChanged()"
+    showFirstLastButtons></mat-paginator>
+
+
+  <div class="node-allocations" [ngStyle]="{ display: selectedRow ? '' : 'none' }">
+    <h3>Allocations</h3>
+    <mat-divider></mat-divider>
+
+    <mat-table [dataSource]="allocDataSource" matSort #allocSort="matSort">
+      <ng-container [matColumnDef]="columnDef.colId" *ngFor="let columnDef of allocColumnDef">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>{{ columnDef.colName }}</mat-header-cell>
+
+        <ng-container *ngIf="columnDef.colId === 'resource'; else renderNext_2">
+          <mat-cell *matCellDef="let element">
+            <ng-container *ngIf="columnDef.colFormatter; else showAllocRowData">
               <ng-container *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue">
-                  <ul class="mat-res-ul">
-                    <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
-                      <li class="mat-res-li" *ngIf="i<2" 
-                          [innerHTML]="resource | highlightSearch: filterValue"></li>
-                      <li class="mat-res-li" *ngIf="i>=2 && detailToggle"
-                          [innerHTML]="resource | highlightSearch: filterValue"></li>
-                    </ng-container>
-                  </ul>
+                <ul class="mat-res-ul">
+                  <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
+                    <li class="mat-res-li" *ngIf="i<2">
+                      {{resource}}
+                    </li>
+                    <li class="mat-res-li" *ngIf="i>=2 && detailToggle">
+                      {{resource}}
+                    </li>
+                  </ng-container>
+                </ul>
               </ng-container>
             </ng-container>
-            <ng-template #showNodeRawData>
-              <span [innerHTML]="element[columnDef.colId] | highlightSearch: filterValue"></span>
+            <ng-template #showAllocRowData>
+              <span>{{ element[columnDef.colId] }}</span>
             </ng-template>
           </mat-cell>
         </ng-container>
 
-        <ng-template #renderNext_1>
-            
-            <ng-container *ngIf="columnDef.colId!=='attributes'">
-              <mat-cell *matCellDef="let element">
-                <span [innerHTML]="element[columnDef.colId] || 'n/a' | highlightSearch: filterValue"></span>
-              </mat-cell>
-            </ng-container>
-            
-            <ng-container *ngIf="columnDef.colId=='attributes'">
-              <mat-cell *matCellDef="let element" class="mat-attr">
-                <ul class="mat-attr-ul">
-                  <ng-container *ngFor="let attribute of formatAttribute(element[columnDef.colId]); let i = index">
-                    <li class="mat-attr-li" [innerHTML]="attribute | highlightSearch: filterValue"></li>
-                  </ng-container>      
-                </ul>
-              </mat-cell>
-            </ng-container>
+        <ng-template #renderNext_2>
+          <mat-cell *matCellDef="let element">{{ element[columnDef.colId] || 'n/a' }}</mat-cell>
         </ng-template>
-      </ng-container>
-
-      <ng-container matColumnDef="indicatorIcon">
-        <mat-header-cell *matHeaderCellDef class="indicator-icon"></mat-header-cell>
-        <mat-cell *matCellDef="let element" class="indicator-icon">
-          <span>
-            <i class="fas fa-plus-circle" *ngIf="!element.isSelected"></i>
-            <i class="fas fa-minus-circle" *ngIf="element.isSelected"></i>
-          </span>
-        </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="noRecord">
@@ -113,87 +157,16 @@
         </mat-footer-cell>
       </ng-container>
 
-      <mat-header-row *matHeaderRowDef="nodeColumnIds"></mat-header-row>
+      <mat-header-row *matHeaderRowDef="allocColumnIds"></mat-header-row>
 
-      <mat-row
-        *matRowDef="let row; columns: nodeColumnIds"
-        [class.selected-row]="selectedRow === row"
-        (click)="toggleRowSelection(row)"
-      ></mat-row>
+      <mat-row *matRowDef="let row; columns: allocColumnIds"></mat-row>
 
-      <mat-footer-row
-        *matFooterRowDef="['noRecord']"
-        [ngStyle]="{ display: isNodeDataSourceEmpty() ? '' : 'none' }"
-      ></mat-footer-row>
+      <mat-footer-row *matFooterRowDef="['noRecord']"
+        [ngStyle]="{ display: isAllocDataSourceEmpty() ? '' : 'none' }"></mat-footer-row>
     </mat-table>
 
-    <mat-paginator
-      #nodesViewMatPaginator
-      [pageSizeOptions]="[10, 20, 50, 100]"
-      [ngStyle]="{ display: isNodeDataSourceEmpty() ? 'none' : '' }"
-      (page)="onPaginatorChanged()"
-      showFirstLastButtons
-    ></mat-paginator>
-  </div>
+    <mat-paginator #allocationMatPaginator [pageSizeOptions]="[10, 20, 50, 100]"
+      [ngStyle]="{ display: isAllocDataSourceEmpty() ? 'none' : '' }" showFirstLastButtons></mat-paginator>
 
-  <div class="node-allocations" [ngStyle]="{ display: selectedRow ? '' : 'none' }">
-    <h3>Allocations</h3>
-    <mat-divider></mat-divider>
-
-    <div class="mat-elevation-z8">
-      <mat-table [dataSource]="allocDataSource" matSort #allocSort="matSort">
-        <ng-container [matColumnDef]="columnDef.colId" *ngFor="let columnDef of allocColumnDef">
-          <mat-header-cell *matHeaderCellDef mat-sort-header>{{ columnDef.colName }}</mat-header-cell>
-
-          <ng-container *ngIf="columnDef.colId === 'resource'; else renderNext_2">
-            <mat-cell *matCellDef="let element">
-              <ng-container *ngIf="columnDef.colFormatter; else showAllocRowData">
-                <ng-container *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue">
-                    <ul class="mat-res-ul">
-                      <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
-                        <li class="mat-res-li" *ngIf="i<2">
-                          {{resource}}
-                        </li>
-                        <li class="mat-res-li" *ngIf="i>=2 && detailToggle">
-                          {{resource}}
-                        </li>
-                      </ng-container>
-                    </ul>
-                </ng-container>
-            </ng-container>
-              <ng-template #showAllocRowData>
-                <span>{{ element[columnDef.colId] }}</span>
-              </ng-template>
-            </mat-cell>
-          </ng-container>
-
-          <ng-template #renderNext_2>
-            <mat-cell *matCellDef="let element">{{ element[columnDef.colId] || 'n/a' }}</mat-cell>
-          </ng-template>
-        </ng-container>
-
-        <ng-container matColumnDef="noRecord">
-          <mat-footer-cell *matFooterCellDef>
-            <div class="no-record">No records found</div>
-          </mat-footer-cell>
-        </ng-container>
-
-        <mat-header-row *matHeaderRowDef="allocColumnIds"></mat-header-row>
-
-        <mat-row *matRowDef="let row; columns: allocColumnIds"></mat-row>
-
-        <mat-footer-row
-          *matFooterRowDef="['noRecord']"
-          [ngStyle]="{ display: isAllocDataSourceEmpty() ? '' : 'none' }"
-        ></mat-footer-row>
-      </mat-table>
-
-      <mat-paginator
-        #allocationMatPaginator
-        [pageSizeOptions]="[10, 20, 50, 100]"
-        [ngStyle]="{ display: isAllocDataSourceEmpty() ? 'none' : '' }"
-        showFirstLastButtons
-      ></mat-paginator>
-    </div>
   </div>
 </div>
